Revert "fix "big white gap at the bottom""

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,5 +1,6 @@
 /*----HOMEPAGE----*/
 .intro-header {
+  background-image: url("../greenGradient.jpg");
   height: 100%;
   padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
   padding-bottom: 50px;
